force-app/main/default/objects/Family_Enquiry__c/Family_Enquiry__c.object-meta.xml
<CustomObject>
    <description>What a family asked for at the desk, by phone or message, captured by staff in Family 360.</description>
    <label>Family Enquiry</label>
    <nameField>
        <displayFormat>FE-{000000}</displayFormat>
        <label>Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>