force-app/main/default/objects/Family_Enquiry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Household the enquiry belongs to.</description>
    <label>Household</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Family Enquiries</relationshipLabel>
    <relationshipName>Family_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>