force-app/main/default/objects/Family_Enquiry__c/fields/Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Add_Ons__c</fullName>
    <description>Add-ons the family asked about.</description>
    <label>Add-ons Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Face painting</fullName><default>false</default><label>Face painting</label></value>
            <value><fullName>Balloon art</fullName><default>false</default><label>Balloon art</label></value>
            <value><fullName>Laser tag</fullName><default>false</default><label>Laser tag</label></value>
            <value><fullName>Party packs</fullName><default>false</default><label>Party packs</label></value>
            <value><fullName>Pizza</fullName><default>false</default><label>Pizza</label></value>
            <value><fullName>Mascot</fullName><default>false</default><label>Mascot</label></value>
            <value><fullName>Extra time</fullName><default>false</default><label>Extra time</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>