force-app/main/default/objects/Family_Enquiry__c/fields/Adults__c.field-meta.xml
<CustomField>
    <fullName>Adults__c</fullName>
    <description>Expected headcount.</description>
    <label>Number of Adults</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>