force-app/main/default/objects/Family_Enquiry__c/fields/Allergy_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Flagged__c</fullName>
    <description>Staff-only flag. Never sent to the AI.</description>
    <label>Allergy or Medical Flag</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>