force-app/main/default/objects/Family_Enquiry__c/fields/Applied_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Applied_Record_Id__c</fullName>
    <description>Id of the record created or updated.</description>
    <label>Applied Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>