force-app/main/default/objects/Family_Enquiry__c/fields/Applied_To__c.field-meta.xml
<CustomField>
    <fullName>Applied_To__c</fullName>
    <description>Lead, Booking or Order the draft was applied to.</description>
    <label>Applied To</label>
    <length>40</length>
    <type>Text</type>
</CustomField>