force-app/main/default/objects/Family_Enquiry__c/fields/Backup_Date__c.field-meta.xml
<CustomField>
    <fullName>Backup_Date__c</fullName>
    <description>Second-choice date.</description>
    <label>Backup Date</label>
    <type>Date</type>
</CustomField>