force-app/main/default/objects/Family_Enquiry__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <description>Existing booking this enquiry is about, if any.</description>
    <label>Booking</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Family Enquiries</relationshipLabel>
    <relationshipName>Family_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>