force-app/main/default/objects/Family_Enquiry__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <description>Cancellation reason, as on the Booking picklist.</description>
    <label>Cancel Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>