force-app/main/default/objects/Family_Enquiry__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <description>For booking changes: what the family wants to change.</description>
    <label>Changes Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>Headcount</fullName><default>false</default><label>Headcount</label></value>
            <value><fullName>Room</fullName><default>false</default><label>Room</label></value>
            <value><fullName>Package</fullName><default>false</default><label>Package</label></value>
            <value><fullName>Add-ons</fullName><default>false</default><label>Add-ons</label></value>
            <value><fullName>Cancel</fullName><default>false</default><label>Cancel</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>