force-app/main/default/objects/Family_Enquiry__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>How the enquiry came in.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>Walk-in</fullName><default>false</default><label>Walk-in</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Instagram or Facebook</fullName><default>false</default><label>Instagram or Facebook</label></value>
            <value><fullName>Website</fullName><default>false</default><label>Website</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>