force-app/main/default/objects/Family_Enquiry__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Person who made the enquiry.</description>
    <label>Contact</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Enquiries</relationshipLabel>
    <relationshipName>Family_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>