force-app/main/default/objects/Family_Enquiry__c/fields/Deposit_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Discussed__c</fullName>
    <description>Deposit policy was explained.</description>
    <label>Deposit Discussed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>