force-app/main/default/objects/Family_Enquiry__c/fields/Draft_Status__c.field-meta.xml
<CustomField>
    <fullName>Draft_Status__c</fullName>
    <description>Whether the draft was applied to a Lead, Booking or Order.</description>
    <label>Draft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Applied</fullName><default>false</default><label>Applied</label></value>
            <value><fullName>Held in sandbox</fullName><default>false</default><label>Held in sandbox</label></value>
            <value><fullName>Note only</fullName><default>false</default><label>Note only</label></value>
            <value><fullName>Discarded</fullName><default>false</default><label>Discarded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>