force-app/main/default/objects/Family_Enquiry__c/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <description>Intent staff picked for the conversation.</description>
    <label>What It Is About</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New party</fullName><default>false</default><label>New party</label></value>
            <value><fullName>Change a booking</fullName><default>false</default><label>Change a booking</label></value>
            <value><fullName>Laser tag</fullName><default>false</default><label>Laser tag</label></value>
            <value><fullName>Camp or class</fullName><default>false</default><label>Camp or class</label></value>
            <value><fullName>Drop-in</fullName><default>false</default><label>Drop-in</label></value>
            <value><fullName>Just a question</fullName><default>false</default><label>Just a question</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>