force-app/main/default/objects/Family_Enquiry__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>When staff should follow up; creates a task.</description>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>