force-app/main/default/objects/Family_Enquiry__c/fields/Laser_Tag_Package__c.field-meta.xml
<CustomField>
    <fullName>Laser_Tag_Package__c</fullName>
    <description>1 Game or 2 Game.</description>
    <label>Laser Tag Package</label>
    <length>40</length>
    <type>Text</type>
</CustomField>