force-app/main/default/objects/Family_Enquiry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-text notes; redacted before any AI use.</description>
    <label>What They Asked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>