force-app/main/default/objects/Family_Enquiry__c/fields/Package_Interest__c.field-meta.xml
<CustomField>
    <fullName>Package_Interest__c</fullName>
    <description>Party package value as on Booking.</description>
    <label>Package Interest</label>
    <length>80</length>
    <type>Text</type>
</CustomField>