force-app/main/default/objects/Family_Enquiry__c/fields/Pizza_Count__c.field-meta.xml
<CustomField>
    <fullName>Pizza_Count__c</fullName>
    <description>Pizzas the family expects to order.</description>
    <label>Pizzas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>