force-app/main/default/objects/Family_Enquiry__c/fields/Players__c.field-meta.xml
<CustomField>
    <fullName>Players__c</fullName>
    <description>Laser tag players.</description>
    <label>Laser Tag Players</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>