force-app/main/default/objects/Family_Enquiry__c/fields/Preferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date__c</fullName>
    <description>Date the family would like.</description>
    <label>Preferred Date</label>
    <type>Date</type>
</CustomField>