force-app/main/default/objects/Family_Enquiry__c/fields/Preferred_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time__c</fullName>
    <description>Time slot, as on the Lead picklist.</description>
    <label>Preferred Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>