force-app/main/default/objects/Family_Enquiry__c/fields/Room_Preference__c.field-meta.xml
<CustomField>
    <fullName>Room_Preference__c</fullName>
    <description>Activity room value as on Booking.</description>
    <label>Room Preference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>