force-app/main/default/objects/Family_Enquiry__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <description>Staff member who logged it.</description>
    <label>Team Member</label>
    <length>80</length>
    <type>Text</type>
</CustomField>